--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "clu"
-version = "0.1.0"
+version = "0.0.0-SNAPSHOT"
 authors = ["Ethan Hall <ethan@hall.sh>"]
 edition = "2018"
 
