Add Docker Login to steps

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -10,6 +10,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v1
+      - name: login to registry
+        run: docker login docker.pkg.github.com --username ethankhall --password ${{ secrets.GITHUB_TOKEN }}
       - name: create-release
         run: |
           docker run --rm -e GITHUB_TOKEN=${{ secrets.GITHUB_TOKEN }} -v $(pwd):/target docker.pkg.github.com/ethankhall/crom/cli:latest tag next-release --local --github
@@ -24,6 +26,8 @@ jobs:
         uses: actions-rs/toolchain@v1
         with:
             profile: minimal
+      - name: login to registry
+        run: docker login docker.pkg.github.com --username ethankhall --password ${{ secrets.GITHUB_TOKEN }}
       - name: do-build
         run: |
           docker run --rm -v $(pwd):/target docker.pkg.github.com/ethankhall/crom/cli:latest write-version latest
@@ -46,6 +50,8 @@ jobs:
         uses: actions-rs/toolchain@v1
         with:
             profile: minimal
+      - name: login to registry
+        run: docker login docker.pkg.github.com --username ethankhall --password ${{ secrets.GITHUB_TOKEN }}
       - name: do-build
         run: |
           docker run --rm -v $(pwd):/target docker.pkg.github.com/ethankhall/crom/cli:latest write-version latest
@@ -73,6 +79,8 @@ jobs:
         with:
           name: linux-artifacts
           path: artifacts/linux
+      - name: login to registry
+        run: docker login docker.pkg.github.com --username ethankhall --password ${{ secrets.GITHUB_TOKEN }}
       - name: Create release
         run: |
           docker run --rm -e GITHUB_TOKEN=${{ secrets.GITHUB_TOKEN }} -v $(pwd):/target docker.pkg.github.com/ethankhall/crom/cli:latest upload-artifacts latest --artifact-path=./artifacts linux mac
