--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -33,7 +33,8 @@ jobs:
           docker run --rm -v $(pwd):/target docker.pkg.github.com/ethankhall/crom/cli:latest write-version latest
       - uses: actions-rs/cargo@v1
         with:
-          command: build --release
+          command: build
+          args: --release
       - name: Upload Artifacts
         uses: actions/upload-artifact@v1
         with:
@@ -50,14 +51,16 @@ jobs:
         uses: actions-rs/toolchain@v1
         with:
             profile: minimal
-      - name: login to registry
-        run: docker login docker.pkg.github.com --username ethankhall --password ${{ secrets.GITHUB_TOKEN }}
       - name: do-build
         run: |
-          docker run --rm -v $(pwd):/target docker.pkg.github.com/ethankhall/crom/cli:latest write-version latest
+          mkdir ~/bin
+          curl --location https://github.com/ethankhall/crom/releases/download/v0.1.14/crom-mac.tar.gz | tar -xvz  -C ~/bin
+          chmod +x ~/bin/crom
+          ~/bin/crom write-version latest
       - uses: actions-rs/cargo@v1
         with:
-          command: build --release
+          command: build
+          args: --release
       - name: Upload Artifacts
         uses: actions/upload-artifact@v1
         with:
