--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,7 @@ thiserror = "1.0"
 anyhow = "1.0"
 git2 = "0.13.17"
 async-process = "1.0"
+futures = "0.3"
 # Upgrade to Tokio
 hubcaps = { git = "https://github.com/softprops/hubcaps", rev = "a9e6616ecc7b8eef0ea0eaf6055d9610c8961500" }
 regex = "1.4"
