--- a/.gitignore
+++ b/.gitignore
@@ -2,5 +2,6 @@
 migration-definition.toml
 migration-targets.json
 work-dir
-results.toml
-migration.toml
+results.toml*
+migration.toml*
+!examples/migration.toml
