--- a/examples/migration.toml
+++ b/examples/migration.toml
@@ -2,9 +2,8 @@
 repo = 'git@github.com:ethankhall/dummy-repo.git'
 
 [targets.dummy-repo.pull-request]
-owner = 'ethankhall'
-repo = 'dummy-repo'
 pr_number = 14
+url = 'https://github.com/ethankhall/dummy-repo/pull/14'
 
 [checkout]
 branch-name = 'ethankhall/foo-example'
