Adding run-followup command

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 migration-definition.toml
 migration-targets.json
 work-dir
+follow-up-dir
 results.toml*
 migration.toml*
 !examples/migration.toml
