--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,11 +11,12 @@ tracing = "0.1"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 async-trait = "0.1.42"
-clap = { version = "3.0.0-beta.4" }
+clap = { version = "4.2", features = ["derive", "env"]}
+human-panic = "1"
 dotenv = "*"
 thiserror = "1.0"
 anyhow = "1.0"
-git2 = "0.13.17"
+git2 = {version = "0.17.0", features = ["vendored-openssl", "vendored-libgit2"] }
 async-process = "1.0"
 futures = "0.3"
 regex = "1.4"
