--- a/.github/workflows/on-pull-request.yml
+++ b/.github/workflows/on-pull-request.yml
@@ -21,7 +21,7 @@ jobs:
         run: |
           set -eux
           set -o pipefail
-          VERSION="$(env TZ=UTC date +"1.%Y%m%d.$(git rev-list --count origin/main --since "$(date +'%FT00:00:00-12:00')")")"
+          VERSION="$(env TZ=UTC date +"1.%Y%m%d.0-$(git rev-parse --short HEAD)")"
           echo "Creating release $VERSION"
           echo "::set-output name=version::$VERSION"
           gh release create $VERSION --generate-notes --prerelease --target ${{ github.event.pull_request.head.sha }} --draft
