--- a/.github/workflows/on-main.yml
+++ b/.github/workflows/on-main.yml
@@ -23,7 +23,7 @@ jobs:
           set -o pipefail
           VERSION="$(env TZ=UTC date +"1.%Y%m%d.$(git rev-list --count origin/main --since "$(date +'%FT00:00:00-12:00')")")"
           gh release create $VERSION --generate-notes --target $(git rev-parse HEAD) --draft
-          echo "::set-output name=version::$VERSION"
+          echo "version=$VERSION" >> $GITHUB_OUTPUT
 
   publish:
     uses: ./.github/workflows/create-artifacts.yml
