--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,19 +6,20 @@ edition = "2018"
 
 [dependencies]
 tokio = { version = "1", features = ["full"] }
-tracing-subscriber = "0.2"
+tracing-subscriber = "0.3"
 tracing = "0.1"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
-async-trait = "0.1.42"
-clap = { version = "3.0.0-beta.4" }
+async-trait = "0.1"
+clap = { version = "4.2", features = ["derive", "env"]}
+human-panic = "1"
 dotenv = "*"
-thiserror = "1.0"
-anyhow = "1.0"
-git2 = "0.13.17"
-async-process = "1.0"
+thiserror = "1"
+anyhow = "1"
+git2 = {version = "0.17.0", features = ["vendored-openssl", "vendored-libgit2"] }
+async-process = "1"
 futures = "0.3"
-regex = "1.4"
-toml = "0.5"
-graphql_client = { version = "0.10" }
+regex = "1.8"
+toml = "0.7"
+graphql_client = { version = "0.12" }
 reqwest = { version = "0.11", features = ["json"] }
