--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,15 +11,17 @@ tracing = "0.1"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 async-trait = "0.1"
-clap = { version = "4.2", features = ["derive", "env"]}
+clap = { version = "4.5", features = ["derive", "env"]}
 human-panic = "1"
 dotenv = "*"
 thiserror = "1"
 anyhow = "1"
-git2 = {version = "0.17.0", features = ["vendored-openssl", "vendored-libgit2"] }
+git2 = {version = "0.18", features = ["vendored-openssl", "vendored-libgit2"] }
 async-process = "1"
 futures = "0.3"
-regex = "1.8"
-toml = "0.7"
+regex = "1.10"
+toml = "0.8"
 graphql_client = { version = "0.12" }
-reqwest = { version = "0.11", features = ["json"] }
+reqwest = { version = "0.12", features = ["json"] }
+tracing-indicatif = "0.3.6"
+indicatif = { version = "0.17.8", features = ["tokio", "futures"] }
